--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
+MONGO_URI=mongodb+srv://library:bookapp@cluster0.j3fdv1d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=yourSecretKey
+PORT=5000
 
